cmake_minimum_required(VERSION 3.26)

project(shfl_lua)

add_executable(lua
    lua-5.4.4/src/lapi.c
    lua-5.4.4/src/lapi.h
    lua-5.4.4/src/lauxlib.c
    lua-5.4.4/src/lauxlib.h
    lua-5.4.4/src/lbaselib.c
    lua-5.4.4/src/lcode.c
    lua-5.4.4/src/lcode.h
    lua-5.4.4/src/lcorolib.c
    lua-5.4.4/src/lctype.c
    lua-5.4.4/src/lctype.h
    lua-5.4.4/src/ldblib.c
    lua-5.4.4/src/ldebug.c
    lua-5.4.4/src/ldebug.h
    lua-5.4.4/src/ldo.c
    lua-5.4.4/src/ldo.h
    lua-5.4.4/src/ldump.c
    lua-5.4.4/src/lfunc.c
    lua-5.4.4/src/lfunc.h
    lua-5.4.4/src/lgc.c
    lua-5.4.4/src/lgc.h
    lua-5.4.4/src/linit.c
    lua-5.4.4/src/liolib.c
    lua-5.4.4/src/ljumptab.h
    lua-5.4.4/src/llex.c
    lua-5.4.4/src/llex.h
    lua-5.4.4/src/llimits.h
    lua-5.4.4/src/lmathlib.c
    lua-5.4.4/src/lmem.c
    lua-5.4.4/src/lmem.h
    lua-5.4.4/src/loadlib.c
    lua-5.4.4/src/lobject.c
    lua-5.4.4/src/lobject.h
    lua-5.4.4/src/lopcodes.c
    lua-5.4.4/src/lopcodes.h
    lua-5.4.4/src/lopnames.h
    lua-5.4.4/src/loslib.c
    lua-5.4.4/src/lparser.c
    lua-5.4.4/src/lparser.h
    lua-5.4.4/src/lprefix.h
    lua-5.4.4/src/lstate.c
    lua-5.4.4/src/lstate.h
    lua-5.4.4/src/lstring.c
    lua-5.4.4/src/lstring.h
    lua-5.4.4/src/lstrlib.c
    lua-5.4.4/src/ltable.c
    lua-5.4.4/src/ltable.h
    lua-5.4.4/src/ltablib.c
    lua-5.4.4/src/ltm.c
    lua-5.4.4/src/ltm.h
    lua-5.4.4/src/lua.c
    lua-5.4.4/src/lua.h
    lua-5.4.4/src/lua.hpp
    #lua-5.4.4/src/luac.c
    lua-5.4.4/src/luaconf.h
    lua-5.4.4/src/lualib.h
    lua-5.4.4/src/lundump.c
    lua-5.4.4/src/lundump.h
    lua-5.4.4/src/lutf8lib.c
    lua-5.4.4/src/lvm.c
    lua-5.4.4/src/lvm.h
    lua-5.4.4/src/lzio.c
    lua-5.4.4/src/lzio.h
)